# rinha-de-backend-2026-dotnet

./: .dockerignore  .gitignore  ANALISE.md  CLAUDE.md  Dockerfile  Dockerfile.local  JORNADA.md  LICENSE  README.md  docker-compose.async-faithful.local.yml  docker-compose.local.yml  docker-compose.nocpuset.local.yml  docker-compose.yml  info.json  nginx.conf
api-rs/: Cargo.toml
api-rs/src/: http.rs  index.rs  main.rs  vec.rs
scripts/: build-and-push.sh  build-index.sh
src/Rinha.Api/: Program.cs  RawServer.cs  Responses.cs  Rinha.Api.csproj
src/Rinha.Api/Epoll/: EpollServer.cs  Native.cs
src/Rinha.Core/: FraudRequest.cs  IndexFormat.cs  IvfIndex.cs  MccRisk.cs  Normalization.cs  PayloadParser.cs  Quantizer.cs  Rinha.Core.csproj  Vectorizer.cs
src/Rinha.IndexBuilder/: BuildCommand.cs  DiagCommand.cs  KMeans.cs  Program.cs  ReferenceData.cs  Rinha.IndexBuilder.csproj  SelfTest.cs
tools/Rinha.Validate/: Program.cs  Rinha.Validate.csproj
