[package]
name = "rinha-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rinha-api"
path = "src/main.rs"

[dependencies]
mio = { version = "1", features = ["os-poll", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
